# koffie-backend-challenge

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: export.py  logger.py  main.py  store.py
app/vpic/: client.py  test_client.py
