[tool.poetry]
name = "koffie-backend-challenge"
version = "0.1.0"
description = ""
authors = ["snehesht <mail@snehesh.me>"]

[tool.poetry.dependencies]
python = "^3.10"
aioauth-fastapi = "^0.1.0"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
httpx = "^0.22.0"
aiosqlite = "^0.17.0"
fastparquet = "^0.8.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
